# polygrinder

./: CMakeLists.txt  c_improvements.c  c_improvements.h  main.c  main.h  polynomial.c  polynomial.h
poly/: polynomial.c  polynomial.h  polyprint.c  polyprint.h
util/: double_tracker.c  double_tracker.h  my_math.c  my_math.h
